--- a/src/app/app-grocery/app-grocery.component.html
+++ b/src/app/app-grocery/app-grocery.component.html
@@ -1,24 +1,26 @@
 <div>
-<mat-card> 
-        <div class="row">
-            <div class="col-xs-6 col-md-4">
-                <div class="group">
-                        <mat-form-field appearance="outline">
-                            <mat-label>enter grocery items</mat-label>
-                    <input matInput placeholder="enter grocery items" [(ngModel)]="task" />
-                </mat-form-field>
-                    <button mat-raised-button color="primary" (click)="onClick()">ok</button>
-                </div>
-            </div>
-        </div>
-</mat-card>
-<br />
-        <mat-card-content>
-        <ul class="list-group">
-            <li *ngFor="let task of tasks" class="list-group-item">
-                <span> {{ task.name }} </span>
-            </li>
-        </ul>
-    </mat-card-content>
-    
+ <mat-card> 
+  <div class="row">
+    <div class="col-xs-6 col-md-4">
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="enter grocery items" [(ngModel)]="task" />
+        <span class="input-group-btn">
+          <button class="btn btn-primary" type="button" (click)="onClick()">
+          <i class="glyphicon glyphicon-ok"></i>
+          </button>
+        </span>
+     </div>
     </div>
+  </div> 
+ </mat-card> 
+<br />
+ <mat-card-content>
+   <ul class="list-group">
+    <li *ngFor="let task of tasks" class="list-group-item">
+    <span> {{ task.name }} </span>
+    </li>
+   </ul>
+ </mat-card-content>
+</div>
+    
+    
