added edit,delete and strike

--- a/src/app/app-grocery/app-grocery.component.html
+++ b/src/app/app-grocery/app-grocery.component.html
@@ -1,26 +1,27 @@
 <div>
- <mat-card> 
+<mat-card>
   <div class="row">
-    <div class="col-xs-6 col-md-4">
-      <div class="input-group">
-        <input type="text" class="form-control" placeholder="enter grocery items" [(ngModel)]="task" />
-        <span class="input-group-btn">
-          <button class="btn btn-primary" type="button" (click)="onClick()">
-          <i class="glyphicon glyphicon-ok"></i>
-          </button>
-        </span>
-     </div>
-    </div>
-  </div> 
- </mat-card> 
-<br />
- <mat-card-content>
-   <ul class="list-group">
-    <li *ngFor="let task of tasks" class="list-group-item">
-    <span> {{ task.name }} </span>
-    </li>
-   </ul>
- </mat-card-content>
+      <div class="col-xs-6 col-md-4">
+          <div class="input-group">
+              <input type="text" class="form-control" placeholder="enter grocery items" [(ngModel)]="task.name" />
+              <span class="input-group-btn">
+                  <button class="btn btn-primary" type="button" (click)="onClick()">
+                      <span class="glyphicon glyphicon-ok"></span>
+                  </button>
+                </span>
+          </div>
+           </div>
+  </div>
+</mat-card> 
+<br/>
+          <ul class="list-group">
+              <li *ngFor="let task of tasks" class="list-group-item">
+                  <span (click)="onStrike(task)" [ngClass]="{'strike': task.strike}"> {{ task.name }} </span>
+                  <span (click)="onEdit(task)" class="glyphicon glyphicon-pencil floatright"></span>
+                  <span (click)="onDelete(task)" class="glyphicon glyphicon-remove floatright paddingLeft"></span>
+                  
+              </li>
+          </ul>
 </div>
     
     
